manifests/installation/bare/onex/onex-cacheserver/ingressroute.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/rosas/onex.
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onex-cacheserver-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule # 该规则需要放在第一个
      match: Host(`onex.usercenter.superproj.com`) && PathPrefix(`/healthz`)
      services:
        - kind: Service
          name: onex-cacheserver-healthz
          port: 20250
    - kind: Rule
      match: Host(`onex.usercenter.superproj.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: onex-cacheserver
          port: 8080
